I add a reset button, fix the photos to face the right way, and touched up some of the alignment

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,11 @@ body{
     height: 100%;
 }
 
+.App h1{
+    display: flex;
+    justify-content: center;
+}
+
 .playersName{
     display: flex;
     justify-content: space-between;
@@ -39,5 +44,23 @@ body{
 .buttons{
     display: flex;
     justify-content: space-evenly;
+}
+
+.playerInfo{
+    display: flex;
+    justify-content: center;
+    margin-top: 3%;
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+    font-size: 6vh;
+    margin-top: 3%;
+}
+
+footer a{
+    text-decoration: none;
+  color: black;
 }
 
